# xkmenu

./: README.md  TODO  configure.in.in
src/: Makefile.am  allprogramscomponent.cpp  allprogramscomponent.h  button.cpp  button.h  genericcomponent.cpp  genericcomponent.h  menu.cpp  menu.h  menubottomtitle.cpp  menubottomtitle.h  menucolumn.cpp  menucolumn.h  menucomponent.cpp  menucomponent.h  menuextensionscomponent.cpp  menuextensionscomponent.h  menuitem.cpp  menuitem.h  menutitle.cpp  menutitle.h  menutoptitle.cpp  menutoptitle.h  popupmanager.h  recentapplicationscomponent.cpp  recentapplicationscomponent.h  recentapps.cpp  recentapps.h  separatorcomponent.cpp  separatorcomponent.h  servicemenu.cpp  servicemenu.h  xkmenu.cpp  xkmenu.desktop  xkmenu.h  xkmenu.lsm
src/menus/: Makefile.am
src/menus/left/: Makefile.am  spec.desktop
src/menus/left/00_static/: 00_konqbrowser.desktop  Makefile.am
src/menus/left/01_separator/: Makefile.am
src/menus/left/02_recentapps/: Makefile.am  spec.desktop
src/menus/left/03_separator/: Makefile.am
src/menus/left/04_allprogs/: Makefile.am  spec.desktop
src/menus/right/: Makefile.am  spec.desktop
src/menus/right/00_menuextensions/: Makefile.am  spec.desktop
src/menus/right/01_separator/: Makefile.am
src/menus/right/02_my/: 00_my_documents.desktop  01_my_image.desktop  02_my_music.desktop  03_my_movies.desktop  04_my_computer.desktop  Makefile.am
src/menus/right/03_separator/: Makefile.am
src/menus/right/04_control/: 00_control_panel.desktop  Makefile.am
src/menus/right/05_separator/: Makefile.am  spec.desktop
(+7 files in other folders)
